--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             Etch-A-Sketch
         </h1>
         <div class="container">
-
+            <div class="options">
+            </div>
+            <div class="canvas">
+            </div>
         </div>
     </body>
 </html>
