--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <style src="./style.css"></style>
+        <link rel= 'stylesheet' href="./style.css">
         <script src="./script.js" defer></script>
         <title>Etch-A-Sketch</title>
     </head>
