--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <div class="options">
             </div>
             <div class="canvas">
+                <div class="row">
+                    <div class="column">
+                        <div class="cell"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
