Add buttons for options

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         </h1>
         <div class="container">
             <div class="options">
+                <button class="opacity">Opacity</button>
+                <button class="eraser">Eraser</button>
+                <button class="multi">Multicolor</button>
+                <button class="color">Select a color</button>
+                <button class="clear">Clear</button>
             </div>
             <div class="canvas">
             </div>
