Enable One color function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="opacity">Opacity</button>
                 <button class="eraser">Eraser</button>
                 <button class="multi">Multicolor</button>
-                <button class="color">Select a color</button>
+                <button class="color">One color</button>
                 <button class="clear">Clear</button>
             </div>
             <div class="canvas">
