Add footer with copyright Improve UX with hover buttons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <title>Etch-A-Sketch</title>
     </head>
     <body>
-        <h1>
+        <header>
             Etch-A-Sketch
-        </h1>
+        </header>
         <div class="container">
             <div class="options">
                 <button class="eraser">Eraser</button>
@@ -20,5 +20,8 @@
             <div class="canvas">
             </div>
         </div>
+        <footer>
+            Coded by <a href="https://mariemakesmoneys.github.io/portfolio/">Marie Collecchia</a> © 2022
+        </footer>
     </body>
 </html>
